UI Grids redesign + Templated Grid Element Control + Source folder choosing dialog

--- a/App.axaml
+++ b/App.axaml
@@ -4,5 +4,17 @@
 
     <Application.Styles>
         <FluentTheme Mode="Light"/>
+		<StyleInclude Source="/ViewModels/GridElementControl.axaml"></StyleInclude>
     </Application.Styles>
+
+	<Application.Resources>
+
+		<SolidColorBrush x:Key="DarkBlueBrush">#48577D</SolidColorBrush>
+		<SolidColorBrush x:Key="MidBlueBrush">#7690CF</SolidColorBrush>
+		<SolidColorBrush x:Key="LightBlueBrush">#D3DCF2</SolidColorBrush>
+		<SolidColorBrush x:Key="LightGrayBrush">#9197A6</SolidColorBrush>
+		<SolidColorBrush x:Key="DarkGrayBrush">#43464C</SolidColorBrush>
+		
+	</Application.Resources>
+	
 </Application>
