Result path is changeable + Apply button works and runs mixing

--- a/ViewModels/GridElementControl.axaml
+++ b/ViewModels/GridElementControl.axaml
@@ -16,7 +16,7 @@
       <ControlTemplate>
 		  <Border Background="{TemplateBinding Background}" Padding="10,2" Margin="10,2" CornerRadius="20">
 			  <StackPanel>
-				  <Label Content="{TemplateBinding FileName}" />
+				  <Label Content="{TemplateBinding FileName}" VerticalAlignment="Center" />
 			  </StackPanel>
 		  </Border>
       </ControlTemplate>
