--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -34,7 +34,7 @@
 
 			<!-- Base Grid -->
 			<Grid Grid.Column="0" Margin="10" RowDefinitions="Auto, *">
-				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectBaseFolder}">Select Base Folder</Button>
+				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectBaseFolderAsync}">Select Base Folder</Button>
 				<Border Grid.Row="1" CornerRadius="20" Margin="0,10,0,0" Background="{DynamicResource MidBlueBrush}">
 					<StackPanel  Name="BaseStackPanel">
 						<controls:GridElementControl></controls:GridElementControl>
@@ -43,7 +43,7 @@
 			</Grid>
 			<!-- Ambient Grid -->
 			<Grid Grid.Column="1"  Margin="10" RowDefinitions="Auto, *" Name="AmbientPanel">
-				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectAmbientFolder}">Select Ambient Folder</Button>
+				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectAmbientFolderAsync}">Select Ambient Folder</Button>
 				<Border Grid.Row="1" CornerRadius="20" Margin="0,10,0,0" Background="{DynamicResource MidBlueBrush}">
 					<StackPanel Name="AmbientStackPanel">
 						<controls:GridElementControl></controls:GridElementControl>
@@ -70,7 +70,7 @@
 		<Grid Grid.Row="2" Background="#48577D" Height="40" ColumnDefinitions="Auto, *, Auto">
 			<Button Grid.Column="0" Foreground="White" Command="{Binding SelectResultFolder}">Change Result Folder</Button>
 			<controls:GridElementControl Grid.Column="1" Name="ResultFolderPath" Margin="10,4"></controls:GridElementControl>
-			<Button Grid.Column="2" Name="ApplyButton" Command="{Binding RunApplication}" Foreground="White" Padding="10,0,20,0" IsEnabled="False">Apply</Button>
+			<Button Grid.Column="2" Name="ApplyButton" Command="{Binding RunApplicationAsync}" Foreground="White" Padding="10,0,20,0" IsEnabled="False">Apply</Button>
 		</Grid>
 	</Grid>
 </Window>
