--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:AF_Augmentation.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:controls="clr-namespace:AF_Augmentation.ViewModels"
+        xmlns:controls="clr-namespace:AF_Augmentation.Controls"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
 		Width="800" Height="450" MinHeight="400" MinWidth="750"
         x:Class="AF_Augmentation.MainWindow"
@@ -19,7 +19,7 @@
 		<Grid Grid.Row="1" Background="#D3DCF2" ColumnDefinitions="5*, 5*, 4*">
 
 			<Grid.Styles>
-				<Style Selector="Grid > Button">
+				<Style Selector="Button.large">
 					<Setter Property="HorizontalAlignment" Value="Center"></Setter>
 					<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
 					<Setter Property="Height" Value="40"></Setter>
@@ -34,7 +34,7 @@
 
 			<!-- Base Grid -->
 			<Grid Grid.Column="0" Margin="10" RowDefinitions="Auto, *">
-				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectBaseFolderAsync}">Select Base Folder</Button>
+				<Button Classes="large" Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectBaseFolderAsync}">Select Base Folder</Button>
 				<Border Grid.Row="1" CornerRadius="20" Margin="0,10,0,0" Background="{DynamicResource MidBlueBrush}">
 					<StackPanel  Name="BaseStackPanel">
 						<controls:GridElementControl></controls:GridElementControl>
@@ -43,7 +43,7 @@
 			</Grid>
 			<!-- Ambient Grid -->
 			<Grid Grid.Column="1"  Margin="10" RowDefinitions="Auto, *" Name="AmbientPanel">
-				<Button Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectAmbientFolderAsync}">Select Ambient Folder</Button>
+				<Button Classes="large" Grid.Row="0" HorizontalAlignment="Center" Command="{Binding SelectAmbientFolderAsync}">Select Ambient Folder</Button>
 				<Border Grid.Row="1" CornerRadius="20" Margin="0,10,0,0" Background="{DynamicResource MidBlueBrush}">
 					<StackPanel Name="AmbientStackPanel">
 						<controls:GridElementControl></controls:GridElementControl>
@@ -53,15 +53,15 @@
 			<!-- Options Row -->
 			<Grid Grid.Column="2" Margin="10" RowDefinitions="Auto, Auto, *">
 				
-				<!-- Add/Delete Buttons -->
-				<Button Grid.Row="0">Add Options</Button>
-				<Button Grid.Row="1">Delete Options</Button>
+				<!-- Add Button -->
+				<Button Classes="large" Grid.Row="0" Command="{Binding AddOption}">Add Options</Button>
+				
 
 				<!-- Options Grid -->
-				<Border Classes="OptGrid" Grid.Row="2" Background="#9197A6" CornerRadius="30" Margin="0,10,0,0">
-					<Grid>
+				<Border Classes="OptGrid" Grid.Row="2" Background="#9197A6" CornerRadius="20" Margin="0,10,0,0">
+					<StackPanel Name="OptionsStackPanel">
 						
-					</Grid>
+					</StackPanel>
 				</Border>
 			</Grid>
 		</Grid>
