--- a/App.axaml
+++ b/App.axaml
@@ -1,11 +1,19 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="AF_Augmentation.App">
+             x:Class="AF_Augmentation.App"
+			 xmlns:local="using:AF_Augmentation">
 
+	<Application.DataTemplates>
+		<local:ViewLocator/>
+	</Application.DataTemplates>
+	
     <Application.Styles>
         <FluentTheme Mode="Light"/>
 		<StyleInclude Source="/Controls/GridElementControl.axaml"></StyleInclude>
-		<StyleInclude Source="/Controls/OptionsElementControl.axaml"></StyleInclude>
+		<StyleInclude Source="/Controls/EchoControl.axaml"></StyleInclude>
+		<StyleInclude Source="/Controls/AnimatedPopup.axaml"></StyleInclude>
+		<StyleInclude Source="/Controls/VolumeMultiplyControl.axaml"></StyleInclude>
+		<StyleInclude Source="/Controls/ChooseEffectButton.axaml"></StyleInclude>
     </Application.Styles>
 	
 	<Application.Resources>
