--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,6 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:AF_Augmentation.ViewModels"
+		xmlns:v="using:AF_Augmentation.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:AF_Augmentation.Controls"
@@ -9,133 +10,34 @@
         x:Class="AF_Augmentation.MainWindow"
 		x:DataType="vm:WindowController"
         Title="AF_Augmentation">
-	<!-- Main Grid -->
-	<Grid Name="MainGrid" RowDefinitions="Auto, *, Auto, Auto">		
-		
-		
-		
-		<!-- Option Selector Popup -->
-		<controls:AnimatedPopup Name="OptionSelectorPopup"
-								Grid.Row="0"
-								Grid.RowSpan="4"
-								MinWidth="150"
-								MaxHeight="200"
-								AnimationTime="0.3">
-			<Border Background="White"
-					CornerRadius="20"
-					Padding="10">
-				<ScrollViewer VerticalScrollBarVisibility="Auto">
-					<Grid>
-					<!--<StackPanel HorizontalAlignment="Center"
+	<Grid Name="GeneralContainer">
+		<Rectangle Name="Shadow"
+				   Fill="Black"
+				   ZIndex="2"
+				   Opacity="0.5"
+				   IsVisible="{Binding Shaded}" />
+		<v:LoadingRing IsVisible="{Binding Shaded}" ZIndex="3"></v:LoadingRing>
+		<!-- Main Grid -->
+		<Grid Name="MainGrid" RowDefinitions="Auto, *, Auto, Auto">
+
+
+
+			<!-- Option Selector Popup -->
+			<controls:AnimatedPopup Name="OptionSelectorPopup"
+									Grid.Row="0"
+									Grid.RowSpan="4"
+									MinWidth="150"
+									MaxHeight="200"
+									AnimationTime="0.3">
+				<Border Background="White"
+						CornerRadius="20"
+						Padding="10">
+					<ScrollViewer VerticalScrollBarVisibility="Auto">
+						<Grid>
+							<!--<StackPanel HorizontalAlignment="Center"
 								Name="OptionsList">
 					</StackPanel>-->
-					<ItemsControl ItemsSource="{Binding ControlSelector.Keys}">
-						<ItemsControl.ItemsPanel>
-							<ItemsPanelTemplate>
-								<StackPanel HorizontalAlignment="Center"/>
-							</ItemsPanelTemplate>
-						</ItemsControl.ItemsPanel>
-					</ItemsControl>
-					</Grid>
-				</ScrollViewer>
-
-			</Border>
-		</controls:AnimatedPopup>
-		
-		<!-- Title bar -->
-		<Grid Grid.Row="0"
-			  Background="#48577D"
-			  Height="40"
-			  ColumnDefinitions="*">
-			<Label Grid.Column="0"
-				   Background="#48577D"
-				   Foreground="White"
-				   VerticalAlignment="Center"
-				   HorizontalAlignment="Center">Avalonia</Label>
-		</Grid>
-		
-		<!-- Main area -->
-		<Grid Grid.Row="1"
-			  Background="#D3DCF2"
-			  ColumnDefinitions="*, *, *">
-
-			<Grid.Styles>
-				<Style Selector="Button.large">
-					<Setter Property="HorizontalAlignment" Value="Center"></Setter>
-					<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
-					<Setter Property="Height" Value="40"></Setter>
-					<Setter Property="VerticalContentAlignment" Value="Center"></Setter>
-					<Setter Property="Margin" Value="0,8,0,5"></Setter>
-					<Setter Property="Foreground" Value="White"></Setter>
-					<Setter Property="CornerRadius" Value="20"></Setter>
-					<Setter Property="MinWidth" Value="150"></Setter>
-					<Setter Property="Background" Value="#48577D"></Setter>
-				</Style>
-			</Grid.Styles>
-
-			<!-- Base Grid -->
-			<Grid Grid.Column="0"
-				  Margin="10"
-				  RowDefinitions="Auto, *">
-				<Button Classes="large"
-						Grid.Row="0"
-						Command="{Binding SelectBaseFolderCommand}">Select Base Folder</Button>
-				<Border Grid.Row="1"
-						CornerRadius="20"
-						Margin="0,10,0,0"
-						Background="{DynamicResource MidBlueBrush}">
-					<ScrollViewer>
-						<StackPanel Name="BaseStackPanel"
-									Margin="10">
-							<controls:GridElementControl></controls:GridElementControl>
-						</StackPanel>
-					</ScrollViewer>
-				</Border>	
-			</Grid>
-			<!-- Ambient Grid -->
-			<Grid Grid.Column="1"
-				  Margin="10"
-				  RowDefinitions="Auto, *"
-				  Name="AmbientPanel">
-				<Button Classes="large"
-						Grid.Row="0"
-						Command="{Binding SelectAmbientFolderCommand}">Select Ambient Folder</Button>
-				<Border Grid.Row="1"
-						CornerRadius="20"
-						Margin="0,10,0,0"
-						Background="{DynamicResource MidBlueBrush}">
-					<ScrollViewer>
-						<StackPanel Name="AmbientStackPanel"
-									Margin="10">
-							<controls:GridElementControl></controls:GridElementControl>
-						</StackPanel>
-					</ScrollViewer>
-				</Border>
-			</Grid>
-			<!-- Options Row -->
-			<Grid Grid.Column="2"
-				  Margin="10"
-				  RowDefinitions="Auto, *">
-				
-				<!-- Add Button -->
-				<Button Classes="large"
-						Grid.Row="0"
-						Name="OptionSelectorButton"
-						Command="{Binding #OptionSelectorPopup.ToggleOpenClose}"
-						Content="Select Option">
-				</Button>
-
-				<!-- Options Grid -->
-				<Border Classes="OptGrid" 
-						Grid.Row="1"
-						Background="#9197A6"
-						CornerRadius="20"
-						Margin="0,10,0,0">
-					
-					<ScrollViewer>
-						<Grid>
-							<ItemsControl ItemsSource="{Binding ListOfEffects}"
-										  Name="OptionsGrid">
+							<ItemsControl ItemsSource="{Binding ControlSelector.Keys}">
 								<ItemsControl.ItemsPanel>
 									<ItemsPanelTemplate>
 										<StackPanel HorizontalAlignment="Center"/>
@@ -144,37 +46,144 @@
 							</ItemsControl>
 						</Grid>
 					</ScrollViewer>
-					
+
+				</Border>
+			</controls:AnimatedPopup>
+
+			<!-- Title bar -->
+			<Grid Grid.Row="0"
+				  Background="#48577D"
+				  Height="40"
+				  ColumnDefinitions="*">
+				<Label Grid.Column="0"
+					   Background="#48577D"
+					   Foreground="White"
+					   VerticalAlignment="Center"
+					   HorizontalAlignment="Center">Avalonia</Label>
+			</Grid>
+
+			<!-- Main area -->
+			<Grid Grid.Row="1"
+				  Background="#D3DCF2"
+				  ColumnDefinitions="*, *, *">
+
+				<Grid.Styles>
+					<Style Selector="Button.large">
+						<Setter Property="HorizontalAlignment" Value="Center"></Setter>
+						<Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+						<Setter Property="Height" Value="40"></Setter>
+						<Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+						<Setter Property="Margin" Value="0,8,0,5"></Setter>
+						<Setter Property="Foreground" Value="White"></Setter>
+						<Setter Property="CornerRadius" Value="20"></Setter>
+						<Setter Property="MinWidth" Value="150"></Setter>
+						<Setter Property="Background" Value="#48577D"></Setter>
+					</Style>
+				</Grid.Styles>
+
+				<!-- Base Grid -->
+				<Grid Grid.Column="0"
+					  Margin="10"
+					  RowDefinitions="Auto, *">
+					<Button Classes="large"
+							Grid.Row="0"
+							Command="{Binding SelectBaseFolderCommand}">Select Base Folder</Button>
+					<Border Grid.Row="1"
+							CornerRadius="20"
+							Margin="0,10,0,0"
+							Background="{DynamicResource MidBlueBrush}">
+						<ScrollViewer>
+							<StackPanel Name="BaseStackPanel"
+										Margin="10">
+								<controls:GridElementControl></controls:GridElementControl>
+							</StackPanel>
+						</ScrollViewer>
+					</Border>
+				</Grid>
+				<!-- Ambient Grid -->
+				<Grid Grid.Column="1"
+					  Margin="10"
+					  RowDefinitions="Auto, *"
+					  Name="AmbientPanel">
+					<Button Classes="large"
+							Grid.Row="0"
+							Command="{Binding SelectAmbientFolderCommand}">Select Ambient Folder</Button>
+					<Border Grid.Row="1"
+							CornerRadius="20"
+							Margin="0,10,0,0"
+							Background="{DynamicResource MidBlueBrush}">
+						<ScrollViewer>
+							<StackPanel Name="AmbientStackPanel"
+										Margin="10">
+								<controls:GridElementControl></controls:GridElementControl>
+							</StackPanel>
+						</ScrollViewer>
+					</Border>
+				</Grid>
+				<!-- Options Row -->
+				<Grid Grid.Column="2"
+					  Margin="10"
+					  RowDefinitions="Auto, *">
+
+					<!-- Add Button -->
+					<Button Classes="large"
+							Grid.Row="0"
+							Name="OptionSelectorButton"
+							Command="{Binding #OptionSelectorPopup.ToggleOpenClose}"
+							Content="Select Option">
+					</Button>
+
+					<!-- Options Grid -->
+					<Border Classes="OptGrid"
+							Grid.Row="1"
+							Background="#9197A6"
+							CornerRadius="20"
+							Margin="0,10,0,0">
+
+						<ScrollViewer>
+							<Grid>
+								<ItemsControl ItemsSource="{Binding ListOfEffects}"
+											  Name="OptionsGrid">
+									<ItemsControl.ItemsPanel>
+										<ItemsPanelTemplate>
+											<StackPanel HorizontalAlignment="Center"/>
+										</ItemsPanelTemplate>
+									</ItemsControl.ItemsPanel>
+								</ItemsControl>
+							</Grid>
+						</ScrollViewer>
+
+					</Border>
+				</Grid>
+			</Grid>
+
+			<!-- Bottom bar -->
+			<Grid Grid.Row="2"
+				  Background="#48577D"
+				  Height="40"
+				  ColumnDefinitions="Auto, *, Auto">
+				<Button Grid.Column="0"
+						Foreground="White"
+						Command="{Binding SelectResultFolderCommand}">Change Result Folder</Button>
+				<controls:GridElementControl Grid.Column="1"
+											 FileName="{Binding ResultPath}"
+											 Margin="10,4"></controls:GridElementControl>
+				<Button Grid.Column="2"
+						Name="ApplyButton"
+						Command="{Binding RunApplicationAsync}"
+						Foreground="White"
+						Padding="10,0,20,0"
+						IsEnabled="False">Apply</Button>
+			</Grid>
+			<!--UnderBottom Bar-->
+			<Grid Grid.Row="3">
+				<Border Height="25"
+						Background="{DynamicResource ResourceKey=DarkGrayBrush}">
+					<Label Foreground="White"
+						   Margin="15,0"
+						   Content="{Binding ActiveText}"></Label>
 				</Border>
 			</Grid>
-		</Grid>
-		
-		<!-- Bottom bar -->
-		<Grid Grid.Row="2"
-			  Background="#48577D"
-			  Height="40"
-			  ColumnDefinitions="Auto, *, Auto">
-			<Button Grid.Column="0"
-					Foreground="White"
-					Command="{Binding SelectResultFolderCommand}">Change Result Folder</Button>
-			<controls:GridElementControl Grid.Column="1"
-										 FileName="{Binding ResultPath}"
-										 Margin="10,4"></controls:GridElementControl>
-			<Button Grid.Column="2"
-					Name="ApplyButton"
-					Command="{Binding RunApplicationAsync}"
-					Foreground="White"
-					Padding="10,0,20,0"
-					IsEnabled="False">Apply</Button>
-		</Grid>
-		<!--UnderBottom Bar-->
-		<Grid Grid.Row="3">
-			<Border Height="25"
-					Background="{DynamicResource ResourceKey=DarkGrayBrush}">
-				<Label Name="Log"
-					   Foreground="White"
-					   Margin="15,0"></Label>
-			</Border>
 		</Grid>
 	</Grid>
 </Window>
