Window Controller clean up + overwrote Effect stream processing by frames

--- a/Views/VolumeControlView.axaml
+++ b/Views/VolumeControlView.axaml
@@ -62,6 +62,7 @@
 				</StackPanel>
 
 				<Slider Name="VolumeSlider"
+						Value="{Binding MultiplyBy}"
 						TickPlacement="Outside"
 						IsSnapToTickEnabled="True"
 						IsEnabled="{Binding Active}"
