--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -5,8 +5,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:AF_Augmentation.Controls"
-		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-		Width="800" Height="600" MinHeight="400" MinWidth="750"
+		mc:Ignorable="d"
+		d:DesignWidth="800"
+		d:DesignHeight="450"
+		Width="800"
+		Height="600"
+		MinHeight="400"
+		MinWidth="750"
         x:Class="AF_Augmentation.MainWindow"
 		x:DataType="vm:WindowController"
         Title="AF_Augmentation">
@@ -34,9 +39,6 @@
 						Padding="10">
 					<ScrollViewer VerticalScrollBarVisibility="Auto">
 						<Grid>
-							<!--<StackPanel HorizontalAlignment="Center"
-								Name="OptionsList">
-					</StackPanel>-->
 							<ItemsControl ItemsSource="{Binding ControlSelector.Keys}">
 								<ItemsControl.ItemsPanel>
 									<ItemsPanelTemplate>
@@ -92,12 +94,13 @@
 							CornerRadius="20"
 							Margin="0,10,0,0"
 							Background="{DynamicResource MidBlueBrush}">
-						<ScrollViewer>
-							<StackPanel Name="BaseStackPanel"
-										Margin="10">
-								<controls:GridElementControl></controls:GridElementControl>
-							</StackPanel>
-						</ScrollViewer>
+						<ItemsControl ItemsSource="{Binding BaseFiles}">
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel Margin="10" />
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+						</ItemsControl>
 					</Border>
 				</Grid>
 				<!-- Ambient Grid -->
@@ -112,12 +115,13 @@
 							CornerRadius="20"
 							Margin="0,10,0,0"
 							Background="{DynamicResource MidBlueBrush}">
-						<ScrollViewer>
-							<StackPanel Name="AmbientStackPanel"
-										Margin="10">
-								<controls:GridElementControl></controls:GridElementControl>
-							</StackPanel>
-						</ScrollViewer>
+						<ItemsControl ItemsSource="{Binding AmbientFiles}">
+							<ItemsControl.ItemsPanel>
+								<ItemsPanelTemplate>
+									<StackPanel Margin="10" />
+								</ItemsPanelTemplate>
+							</ItemsControl.ItemsPanel>
+						</ItemsControl>
 					</Border>
 				</Grid>
 				<!-- Options Row -->
@@ -173,7 +177,7 @@
 						Command="{Binding RunApplicationAsync}"
 						Foreground="White"
 						Padding="10,0,20,0"
-						IsEnabled="False">Apply</Button>
+						IsEnabled="{Binding ApplyActivity}">Apply</Button>
 			</Grid>
 			<!--UnderBottom Bar-->
 			<Grid Grid.Row="3">
