--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -5,6 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:AF_Augmentation.Controls"
+		xmlns:beh="clr-namespace:AF_Augmentation.Behaviors"
 		mc:Ignorable="d"
 		d:DesignWidth="800"
 		d:DesignHeight="450"
@@ -89,7 +90,9 @@
 					  RowDefinitions="Auto, *">
 					<Button Classes="large"
 							Grid.Row="0"
-							Command="{Binding SelectBaseFolderCommand}">Select Base Folder</Button>
+							Command="{Binding SelectBaseFolderCommand}"
+							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
+							beh:ButtonPointerEnteredBehav.CommandParameter="Press this button to choose base audiofiles folder">Select Base Folder</Button>
 					<Border Grid.Row="1"
 							CornerRadius="20"
 							Margin="0,10,0,0"
@@ -110,6 +113,8 @@
 					  Name="AmbientPanel">
 					<Button Classes="large"
 							Grid.Row="0"
+							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
+							beh:ButtonPointerEnteredBehav.CommandParameter="Press this button to choose ambient audiofiles folder"
 							Command="{Binding SelectAmbientFolderCommand}">Select Ambient Folder</Button>
 					<Border Grid.Row="1"
 							CornerRadius="20"
@@ -133,6 +138,8 @@
 					<Button Classes="large"
 							Grid.Row="0"
 							Name="OptionSelectorButton"
+							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
+							beh:ButtonPointerEnteredBehav.CommandParameter="Choose an effect for audiofiles"
 							Command="{Binding #OptionSelectorPopup.ToggleOpenClose}"
 							Content="Select Option">
 					</Button>
@@ -168,6 +175,9 @@
 				  ColumnDefinitions="Auto, *, Auto">
 				<Button Grid.Column="0"
 						Foreground="White"
+						Width="180"
+						beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
+						beh:ButtonPointerEnteredBehav.CommandParameter="Button for choosing result folder"
 						Command="{Binding SelectResultFolderCommand}">Change Result Folder</Button>
 				<controls:GridElementControl Grid.Column="1"
 											 FileName="{Binding ResultPath}"
@@ -176,7 +186,7 @@
 						Name="ApplyButton"
 						Command="{Binding RunApplicationAsync}"
 						Foreground="White"
-						Padding="10,0,20,0"
+						Margin="10,0,20,0"
 						IsEnabled="{Binding ApplyActivity}">Apply</Button>
 			</Grid>
 			<!--UnderBottom Bar-->
@@ -184,6 +194,7 @@
 				<Border Height="25"
 						Background="{DynamicResource ResourceKey=DarkGrayBrush}">
 					<Label Foreground="White"
+						   Name="UnderBottomLabel"
 						   Margin="15,0"
 						   Content="{Binding ActiveText}"></Label>
 				</Border>
