--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -16,6 +16,11 @@
         x:Class="AF_Augmentation.MainWindow"
 		x:DataType="vm:WindowController"
         Title="AF_Augmentation">
+	
+	<Design.DataContext>
+		<vm:WindowController />
+	</Design.DataContext>
+	
 	<Grid Name="GeneralContainer">
 		<Rectangle Name="Shadow"
 				   Fill="Black"
@@ -90,7 +95,7 @@
 					  RowDefinitions="Auto, *">
 					<Button Classes="large"
 							Grid.Row="0"
-							Command="{Binding SelectBaseFolderCommand}"
+							Command="{Binding SelectBaseFolderAsync}"
 							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
 							beh:ButtonPointerEnteredBehav.CommandParameter="Press this button to choose base audiofiles folder">Select Base Folder</Button>
 					<Border Grid.Row="1"
@@ -115,7 +120,7 @@
 							Grid.Row="0"
 							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
 							beh:ButtonPointerEnteredBehav.CommandParameter="Press this button to choose ambient audiofiles folder"
-							Command="{Binding SelectAmbientFolderCommand}">Select Ambient Folder</Button>
+							Command="{Binding SelectAmbientFolderAsync}">Select Ambient Folder</Button>
 					<Border Grid.Row="1"
 							CornerRadius="20"
 							Margin="0,10,0,0"
@@ -140,7 +145,7 @@
 							Name="OptionSelectorButton"
 							beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
 							beh:ButtonPointerEnteredBehav.CommandParameter="Choose an effect for audiofiles"
-							Command="{Binding #OptionSelectorPopup.ToggleOpenClose}"
+							Command="{Binding #OptionSelectorPopup.ToggleOpenCloseCommand}"
 							Content="Select Option">
 					</Button>
 
@@ -178,7 +183,7 @@
 						Width="180"
 						beh:ButtonPointerEnteredBehav.Command="{Binding DisplayLogCommand}"
 						beh:ButtonPointerEnteredBehav.CommandParameter="Button for choosing result folder"
-						Command="{Binding SelectResultFolderCommand}">Change Result Folder</Button>
+						Command="{Binding SelectResultFolderAsync}">Change Result Folder</Button>
 				<controls:GridElementControl Grid.Column="1"
 											 FileName="{Binding ResultPath}"
 											 Margin="10,4"></controls:GridElementControl>
